fixed for dark mode
what people say

--- a/Content/WordAnimation/flip-shake.css
+++ b/Content/WordAnimation/flip-shake.css
@@ -30,7 +30,6 @@
     display: inline-block;
     background-size: 120% 100%;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
     -moz-background-clip: text;
     -moz-text-fill-color: transparent;
     -ms-background-clip: text;
